--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-"Hello Word" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="css/styles.min.css">
+</head>
+<body ng-app="main.module">
+<header-page></header-page>
+<div class="container">
+    <div ng-view></div>
+</div>
+<footer></footer>
+</body>
+
+<script src="js/lib.min.js"></script>
+
+<script src="js/app.min.js"></script>
+<script src="js/templates.min.js"></script>
+</html>
